# chamfer_distance_cpp

./: .gitignore  CMakeLists.txt  README.md  chamfer_distance.cpp  run_chamfer_demo.sh
torch_cd/: torch_cd.cpp  torch_cd.hpp
